First draft, no html display

--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
-<!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <meta charset="utf-8">
+  <meta charset="UTF-8">
+  <title>Testing</title>
 </head>
 
 <body>
-    <!-- Write your markup here -->
+  <div id="dynamic-content"></div>
 
-    <!-- Don't forget to add your <script> tag here -->
+  
+  <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+  <script src="main.js"></script>
 </body>
+
 </html>
