--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <script src="main.js"></script>
         <link rel="stylesheet" href="style.css">
         <h1 position:>San Diego Top Spots</h1>
-            <h2>Semper Vigilans</h2>
+            <h2>America's Finest City!</h2>
     </head>
 
 <body>
