--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
+<img id="seal" src="img/2seal.png"><br>
+<h1>America's Finest City!
+        <br>
+    <img id="words" src="img/words.png">
+</h1>
+<h2>Top Spots</h2>
+
+
 <body>
-    <h1>San Diego Top Spots</h1>
-    <h2>America's Finest City!</h2>
 
     <table id="topSpotsTable">
         <thead>
