--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
 </head>
 
 <img id="seal" src="img/2seal.png"><br>
-<h1>America's Finest City!
+<h1>San Diego Top Spots</h1>
         <br>
     <img id="words" src="img/words.png">
-</h1>
-<h2>Top Spots</h2>
+<!-- <h2>Top Spots</h2> -->
 
 
 <body>
