--- a/index.html
+++ b/index.html
@@ -1,37 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-
-    <head>
-        <meta charset="UTF-8">
-        <title>San Diego Top Spots</title>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-        <script src="main.js"></script>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <form id="form" role="search">
-        <input type="search" id="query" name="q" placeholder="Search..." aria-label="Search page">
-        <button>Search</button>
-      </form>
-    <img id="seal" src="img/2seal.png"><br>
-    <h1>San Diego Top Spots</h1>
-    <br>
-    <img id="words" src="img/words.png">
-    <h2>America's Finest City!</h2>
-    
-    <iframe id='map' src="https://www.google.com/maps/d/u/0/embed?mid=1SGAKTJtr2ixHgYuRjqElEPkfhXn7Z8s&ehbc=2E312F" width="640" height="480"></iframe>
-
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <title>San Diego Top Spots</title>
+</head>
 <body>
 
-    <table id="topSpotsTable">
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Description</th>
-                <th>Location</th>
-            </tr>
-        </thead>
-        <tbody id="dynamic-content"></tbody>
-    </table>
-</body>
+  <header class="grid-container">
+    <h1>San Diego Top Spots</h1>
+    <img id="seal" src="img/2seal.png" alt="San Diego Seal">
+    <img id="words" src="img/words.png" alt="Top Spots Words">
+    <h2>America's Finest City!</h2>
+    <form id="form" role="search">
+      <input type="search" id="query" name="q" placeholder="Search..." aria-label="Search page">
+      <button>Search</button>
+    </form>
+    <iframe id='map' src="https://www.google.com/maps/d/u/0/embed?mid=1SGAKTJtr2ixHgYuRjqElEPkfhXn7Z8s&ehbc=2E312F"
+            width="576" height="432"></iframe>
+  </header>
 
+  <main class="grid-container">
+
+    <table id="topSpotsTable">
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Description</th>
+          <th>Location</th>
+        </tr>
+      </thead>
+      <tbody id="dynamic-content"></tbody>
+    </table>
+  </main>
+
+</body>
 </html>
