minor facia update, final pending presentation

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <button>Search</button>
     </form>
     <iframe id='map' src="https://www.google.com/maps/d/u/0/embed?mid=1SGAKTJtr2ixHgYuRjqElEPkfhXn7Z8s&ehbc=2E312F"
-            width="576" height="432"></iframe>
+            width="100%" height="100%"></iframe>
   </header>
 
   <main class="grid-container">
